# AppTossLite

./: CLAUDE.md  Cargo.toml  README.md
.claude/commands/: release.md
src/: main.rs
src/cli/: actions.rs  adapters.rs  clean.rs  cleanup.rs  config.rs  devices.rs  doctor.rs  mod.rs  projects.rs  sign.rs  signing.rs  state.rs
src/core/: actions.rs  clean.rs  config.rs  device.rs  doctor.rs  error.rs  interaction.rs  mod.rs  project.rs  sign.rs  state.rs  time.rs  xcrun.rs
src/tui/: actions.rs  adapters.rs  devices.rs  mod.rs  projects.rs
