[package]
name = "toss"
version = "0.3.0"
edition = "2024"
description = "Fast CLI to deploy self-built iOS apps to connected devices"

[[bin]]
name = "toss"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tempfile = "3"
dirs = "6"
console = "0.15"
crossterm = "0.28"
ratatui = "0.29"
time = { version = "0.3", features = ["formatting", "parsing"] }
